fix(colors): fix space between swatches and cta on mobile

--- a/src/js/components/organisms/colors/colors.scss
+++ b/src/js/components/organisms/colors/colors.scss
@@ -4,7 +4,7 @@
         display: flex;
         flex-wrap: wrap;
         list-style: none;
-        margin: 0 0 ($buildingUnit * 1.5);
+        margin: 0 0 $buildingUnit;
         padding: 0;
 
         @include min-tablet {
